Fix some ugly font rendering on firefox

--- a/src/stylus/buttons.styl
+++ b/src/stylus/buttons.styl
@@ -4,7 +4,6 @@
   font-size: 18px;
   color: #fff;
   text-decoration: none;
-  font-weight: bold;
   font-family: 'Proxima Nova Bold';
   display: inline-block;
   transition: background-color ease .2s;
